Update digitaljs_lua so that the lua script can always be aborted

--- a/package.json
+++ b/package.json
@@ -314,7 +314,7 @@
         "base64-arraybuffer": "^1.0.2",
         "crypto-browserify": "^3.12.0",
         "digitaljs": "github:yuyichao/digitaljs#dev",
-        "digitaljs_lua": "^0.0.7",
+        "digitaljs_lua": "github:yuyichao/digitaljs_lua#dev",
         "hammerjs": "^2.0.8",
         "lodash": "^4.17.21",
         "path-browserify": "^1.0.1",
